methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:4: error: type mismatch;
 found   : java.awt.Color
 required: String
     if (isFacingTrail(c)){
                       ^